# declarative-api

./: .gitignore  Cargo.toml  LICENCE  README.md  flake.nix  package.nix  spec.json
crates/00-driver/: Cargo.toml
crates/00-driver/src/: lib.rs  main.rs
crates/00-driver/src/commands/: mod.rs
crates/00-driver/src/commands/dev/: lex.rs  mod.rs  parse.rs
crates/01-lexer/: Cargo.toml
crates/01-lexer/src/: cursor.rs  lib.rs  span.rs  symbols.rs
crates/01-lexer/src/poor/: cursor.rs  lexer.rs  token.rs
crates/01-lexer/src/rich/: enricher.rs  mod.rs  token.rs
crates/02-parser/: Cargo.toml
crates/02-parser/src/: eat.rs  error.rs  lib.rs  parse.rs  parser.rs
crates/02-parser/src/parser/: attr.rs  error.rs  expr.rs  factory.rs  item.rs  mod.rs  ty.rs
crates/02-parser/tests/: ast.rs
crates/03-ast/: Cargo.toml
crates/03-ast/src/: ast.rs  lib.rs  ptr.rs  tests.rs  types.rs
crates/03-ast/src/types/: attr.rs  expr.rs  item.rs  mod.rs  node.rs
crates/03-ast/tests/: ast.rs
crates/05-ast-lowering/: Cargo.toml
crates/05-ast-lowering/src/: lib.rs
crates/06-hir/src/: lib.rs  types.rs
crates/07-docgen/: Cargo.toml
crates/07-hir-lowering/: Cargo.toml
crates/07-hir-lowering/src/: lib.rs  tests.rs  types.rs  utils.rs
crates/08-docgen/: Cargo.toml
crates/08-docgen/src/: lib.rs  tests.rs
crates/ast/: Cargo.toml
crates/ast-lowering/: Cargo.toml
crates/ast-lowering/src/: lib.rs  tests.rs  types.rs  utils.rs
crates/ast-parser/: Cargo.toml
crates/ast-parser/src/: lib.rs  types.rs
crates/ast/src/: lib.rs  types.rs  visit.rs  visit_mut.rs  visitor.rs
crates/ast/src/types/: attr.rs  expr.rs  item.rs  mod.rs  node.rs
crates/docgen/: Cargo.toml
crates/docgen/src/: lib.rs  tests.rs  types.rs
crates/driver/: Cargo.toml
crates/driver/src/: main.rs
crates/driver/src/commands/: compile.rs  mod.rs
crates/driver/src/commands/dev/: expand.rs  lex.rs  mod.rs  parse.rs
crates/expand/: Cargo.toml
crates/expand/src/: errors.rs  lib.rs  node.rs  scope.rs
crates/generator_openapi/: Cargo.toml
crates/generator_openapi/src/: lib.rs
crates/hir/: Cargo.toml
crates/hir-lowering/: Cargo.toml
crates/hir-lowering/src/: tests.rs
crates/hir/src/: lib.rs  types.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs
crates/lexer/src/poor/: cursor.rs  lexer.rs  mod.rs  token.rs
crates/lexer/src/poor/snapshots/: dapic_lexer__poor__cursor__tests__tokenize_attribute.snap  dapic_lexer__poor__cursor__tests__tokenize_urls.snap  lexer__poor__cursor__tests__tokenize_example.snap
crates/lexer/src/rich/: enricher.rs  errors.rs  mod.rs  token.rs
crates/macros/: Cargo.toml
crates/macros/src/: diagnostics.rs  lib.rs  symbols.rs
crates/parser/: Cargo.toml
crates/parser/src/: error.rs  lib.rs
crates/parser/src/parser/: attr.rs  expr.rs  factory.rs  item.rs  mod.rs  ty.rs
crates/parser/src/parser/snapshots/: dapic_parser__parser__expr__tests__parse_parse_field_defs.snap  dapic_parser__parser__item__tests__parse_path_item_kind_long_complex.snap  parser__parser__expr__tests__parse_field_defs.snap  parser__parser__item__tests__parse_parse_path_item_kind_complex.snap  parser__parser__item__tests__parse_parse_path_item_kind_simple.snap  parser__parser__item__tests__parse_parse_path_item_kind_variable.snap  parser__parser__tests__parse_parse_delimited.snap
crates/parser/tests/: ast.rs
crates/passes/: Cargo.toml
crates/passes/src/: lib.rs
crates/session/: Cargo.toml
crates/session/src/: diagnostics.rs  id.rs  lib.rs  macros.rs  source_map.rs  span.rs  symbols.rs
examples/: ontake-petstore.dapi  paradigm.dapi  petstore.dapi
examples/paradigm/: builder.dapi  paradigm.dapi
examples/wiro-api/: main.dapi
tests/: 01-test.dapi  main.dapi
