[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
ast = { path = "crates/ast" }
expand = { path = "crates/expand" }
lexer = { path = "crates/lexer" }
macros = { path = "crates/macros" }
parser = { path = "crates/parser" }
session = { path = "crates/session" }

ariadne = "0.3.0"
parking_lot = "0.12.1"
thin-vec = "0.2.12"
tracing = "0.1.37"

# Dev
insta = "1.34.0"
paste = "1.0.14"

[patch.crates-io]
ariadne = { git = "https://github.com/MrNossiom/ariadne", branch = "main" }
