[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
dapic_ast = { path = "crates/ast" }
dapic_expand = { path = "crates/expand" }
dapic_hir = { path = "crates/hir" }
dapic_lexer = { path = "crates/lexer" }
dapic_macros = { path = "crates/macros" }
dapic_parser = { path = "crates/parser" }
dapic_session = { path = "crates/session" }

ariadne = "0.4.0"
parking_lot = "0.12.1"
thin-vec = "0.2.12"
tracing = "0.1.37"

# Dev
insta = "1.34.0"
paste = "1.0.14"

[workspace.lints]
[workspace.lints.rust]
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

dbg_macro = "warn"
# missing_docs_in_private_items = "warn"
todo = "warn"
unwrap_used = "warn"

redundant_pub_crate = "allow"
enum_glob_use = "allow"
module_name_repetitions = "allow"
[workspace.lints.rustdoc]
all = { level = "warn", priority = -1 }

[patch.crates-io]
ariadne = { git = "https://github.com/mrnossiom/ariadne", branch = "main" }
