[package]
name = "driver"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { workspace = true }
lexer = { workspace = true }
parser = { workspace = true }

clap = { version = "4.3.21", features = ["derive"] }
