[package]
name = "parser"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { workspace = true }
ast = { workspace = true }
session = { workspace = true }
macros = { workspace = true }

ariadne = { workspace = true }
thin-vec = { workspace = true }
tracing = { workspace = true }
