[package]
name = "lexer"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
session = { workspace = true }
macros = { workspace = true }
tracing = { workspace = true }

parking_lot = { workspace = true }

unic-emoji-char = "0.9.0"
unicode-xid = "0.2.4"
derive_more = "0.99.17"
