lints.workspace = true

[package]
name = "lexer"
version = "0.0.0"
edition = "2021"

[dependencies]
session = { workspace = true }
macros = { workspace = true }
tracing = { workspace = true }

parking_lot = { workspace = true }

unic-emoji-char = "0.9.0"
unicode-xid = "0.2.4"
derive_more = "0.99.17"

[dev-dependencies]
insta = { workspace = true }
paste = { workspace = true }
