lints.workspace = true

[package]
name = "dapic_lexer"
version = "0.0.0"
edition = "2024"

[dependencies]
dapic_session.workspace = true
dapic_macros.workspace = true

tracing.workspace = true
parking_lot.workspace = true

unic-emoji-char = "0.9"
unicode-xid = "0.2"

[dev-dependencies]
insta.workspace = true
paste.workspace = true
