lints.workspace = true

[package]
name = "parser"
version = "0.0.0"
edition = "2021"

[dependencies]
lexer = { workspace = true }
ast = { workspace = true }
session = { workspace = true }
macros = { workspace = true }

thin-vec = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
paste = { workspace = true }
