lints.workspace = true

[package]
name = "dapic_parser"
version = "0.0.0"
edition = "2021"

[dependencies]
dapic_lexer = { workspace = true }
dapic_ast = { workspace = true }
dapic_session = { workspace = true }
dapic_macros = { workspace = true }

thin-vec = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
paste = { workspace = true }
