[package]
name = "session"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { workspace = true }
tracing = { workspace = true }

miette = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }

typed-arena = "2.0.2"
