lints.workspace = true

[package]
name = "dapic_session"
version = "0.0.0"
edition = "2021"

[dependencies]
dapic_macros = { workspace = true }

tracing = { workspace = true }
ariadne = { workspace = true }
parking_lot = { workspace = true }

typed-arena = "2.0.2"
negative-impl = "0.1.4"
unicode-width = "0.1.10"
